created base fanta page with orange background colour and linked it to the index page

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ body{
     background-position: center top;
 }
 
+#fanta{
+    background: #FF8201;
+}
+
 .header-image nav a{
     font-size: 1.25em !important;
 }
